FIX: Dropdown filter text was overlapping

--- a/src/gui/Components/ScreenElements/Table/FilterSettings/FilterSettingsComboBox.module.scss
+++ b/src/gui/Components/ScreenElements/Table/FilterSettings/FilterSettingsComboBox.module.scss
@@ -58,7 +58,6 @@
   color: $blue;
   cursor: pointer;
   font-weight: 400;
-  height: 25px;
   padding: 0 0.5em;
   &:hover {
     background: $blue;
